[package]
name = "sagahalla-dao"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2018"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
repository = "https://github.com/<xxx>/<xxx>"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.83"
aurora-engine-sdk = "1.1.0"
near-sdk = { version = "4.0.0-pre.4", features = ["unstable"]  }

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
